--- a/config/redseiko.valheim.intermission.cfg
+++ b/config/redseiko.valheim.intermission.cfg
@@ -1,4 +1,4 @@
-## Settings file was created by plugin Intermission v1.0.2
+## Settings file was created by plugin Intermission v1.8.0
 ## Plugin GUID: redseiko.valheim.intermission
 
 [_Global]
@@ -25,13 +25,20 @@ useScaleLerp = true
 ## Image.scale ending factor for the scale lerp animation.
 # Setting type: Single
 # Default value: 1.05
-# Acceptable value range: From 0,5 to 1,5
+# Acceptable value range: From 0.5 to 1.5
 lerpEndScale = 1.15
 
 ## Duration for the scale lerp animation.
 # Setting type: Single
 # Default value: 15
 lerpDuration = 15
+
+[LoadingScreen.Background]
+
+## Color to use for the loading screen background.
+# Setting type: Color
+# Default value: 000000FF
+backgroundColor = 000000FF
 
 [LoadingScreen.PanelSeparator]
 
@@ -63,15 +70,25 @@ textFontSize = 20
 # Default value: FFFFFFFF
 textColor = C0FFD9FF
 
-[LoadingTip.Text.Shadow]
+[SceneLoader]
 
-## LoadingTip.Text.Shadow.effectColor value.
-# Setting type: Color
-# Default value: 00000099
-shadowEffectColor = 00000099
+## If set, will use custom loading images on the initial SceneLoader scene.
+# Setting type: Boolean
+# Default value: true
+useLoadingImages = true
 
-## LoadingTip.Text.Shadow.effectDistance value.
+## If set, will show loading progress text on the initial SceneLoader scene.
+# Setting type: Boolean
+# Default value: true
+showProgressText = true
+
+## If set, will center the loading progress indicator (instead of being on the lower-right).
+# Setting type: Boolean
+# Default value: true
+centerProgressIndicator = true
+
+## When centerProgressIndicator is true, this is used to offset from the bottom center.
 # Setting type: Vector2
-# Default value: {"x":2.0,"y":-2.0}
-shadowEffectDistance = {"x":2.0,"y":-2.0}
+# Default value: {"x":0.0,"y":200.0}
+progressIndicatorOffset = {"x":0.0,"y":200.0}
 
